inizio lavoro sull' aside

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,6 @@ header .wrapHeadNavigazione .wrapLogo {
 .allMainContent aside {
   width: 20%;
   height: 100%;
-  background-color: orange;
+  background-color: #dbdbdb;
 }
 
