--- a/sass/partials/main.scss
+++ b/sass/partials/main.scss
@@ -6,8 +6,8 @@
 
   & aside {
     width: 20%;
-    height: 90%;
-    background-color: orange;
-    
+    height: 100%;
+    background-color: $grigio;
+
   }
 }
