--- a/sass/partials/main.scss
+++ b/sass/partials/main.scss
@@ -9,9 +9,9 @@
     height: 100%;
     background-color: $grigio;
 
-    .wrapMenuPilota {
+    .wrapMenu {
       height: 100%;
-      .wrapMenuPilotaTitle {
+      .wrapMenuTitle {
         padding-top: 20px;
         padding-left: 10px;
         display: flex;
